<resources>
    <string name="app_name">羽球密碼</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">登入</string>

    <string name="facebook_app_id">1669875846375141</string>
    <string name="fb_login_protocol_scheme">fb1669875846375141</string>
    <string name="youtube_api_key">AIzaSyCR_6_3cnKPtamzWcXtwqjedFCcKYD3zPI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="deeplink_redirect_scheme">testlib</string>
    <string name="deeplink_redirect_host">vimeonetworktestlib.com</string>

    <string name="no_network_connection" translatable="false">No network connection found</string>
    <string name="generic_server_down" translatable="false">Server down</string>
    <string name="generic_server_timeout" translatable="false">Server Timeout</string>
    <string name="generic_error" translatable="false">No internet</string>
    <string name="no_internet" translatable="false">No internet</string>
    <string name="parsing_failed" translatable="false">Parsing Failure</string>
    <string name="auth_failed" translatable="false">Authentication Failure</string>
    <string name="title_activity_temp_play_vc">TempPlayVC</string>
    <string name="title_activity_my_map_vc">Map</string>
    <string name="title_activity_splash_vc">SplashVC</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--    賽事 match-->
    <string name="match">賽事</string>
    <string name="match_manage">管理賽事</string>
    <string name="match_content">內容</string>
    <string name="match_brochure">簡章</string>
    <string name="match_sign_up">報名</string>
    <string name="match_sign_up_not_start">還沒到報名時間，無法報名</string>
    <string name="match_sign_up_finish">已超過報名時間，無法報名</string>
    <string name="match_sign_up_group_limited">已超過報名組數，無法報名</string>
    <string name="match_sign_up_stop_modify">已經超過報名時間，無法修改報名資料</string>
    <string name="match_sign_price">NT$ %1$d 元</string>
    <string name="match_num_person">人數: %1$d 人</string>
    <string name="match_sign_group">報名組數: %1$d 組</string>
    <string name="match_limit_group">限制組數: %1$d 組</string>
    <string name="match_cancel">取消</string>
    <string name="match_sign_team_information">組隊資料</string>
    <string name="match_sign_team_name">隊名</string>
    <string name="match_sign_captain_name">隊長姓名</string>
    <string name="match_sign_captain_phone">隊長手機</string>
    <string name="match_sign_captain_email">隊長Email</string>
    <string name="match_sign_captain_line">隊長Line</string>
    <string name="match_sign_cannot_blank">不能爲空白</string>
    <string name="match_sign_player_num">隊員 %1$d \u0020</string>
    <string name="match_sign_name">姓名</string>
    <string name="match_sign_phone">手機</string>
    <string name="match_sign_email">Email</string>
    <string name="match_sign_line">Line</string>
    <string name="match_sign_age">年齡</string>
    <string name="match_sign_giveaway">贈品</string>
    <string name="match_match_date_time">賽事日期時間</string>
    <string name="match_start_date">比賽開始日期:</string>
    <string name="match_end_date">比賽結束日期:</string>
    <string name="match_sign_start_date">報名開始日期:</string>
    <string name="match_sign_end_date">報名結束日期:</string>
    <string name="match_location">賽事地點</string>
    <string name="match_location_city">比賽地點:</string>
    <string name="match_location_arena">比賽球館:</string>
    <string name="match_location_arena_address">球館地址:</string>
    <string name="match_location_arena_phone">球館電話:</string>
    <string name="match_ball">比賽用球:</string>
    <string name="match_contact_person">賽事聯絡人:</string>
    <string name="match_team_group">賽事組別:</string>
    <string name="match_team_sign_fee">報名費:</string>
    <string name="match_team_limit_group">限制組數:</string>
    <string name="match_team_sign_date">報名日期:</string>
    <string name="match_sign_success">報名完成</string>
    <string name="match_sign_edit_success">報名修改完成</string>
    <string name="match_manage_delete">報名已刪除</string>
    <string name="match_manage_cant_delete_paid">已經報名且繳費，無法刪除隊伍，只能棄權</string>
    <string name="match_manage_cant_delete_expired">已經超過報名截止時間，無法刪除隊伍</string>

</resources>
